force-app/main/default/objects/Client_PO_Tracker__c/Client_PO_Tracker__c.object-meta.xml
<CustomObject>
    <label>Client PO Tracker</label>
    <nameField>
        <label>PO Spare Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client PO Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>