force-app/main/default/objects/Client_PO_Tracker__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PO_Spare_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>