force-app/main/default/objects/Client_PO_Tracker__c/fields/Delivery_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Due_Date__c</fullName>
    <label>Delivery Due Date</label>
    <type>Date</type>
</CustomField>