force-app/main/default/objects/Client_PO_Tracker__c/fields/Exptected_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Exptected_Dispatch_Date__c</fullName>
    <label>Exptected Dispatch Date</label>
    <type>Date</type>
</CustomField>