force-app/main/default/objects/Client_PO_Tracker__c/fields/Invoice_Dated__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Dated__c</fullName>
    <label>Invoice Dated</label>
    <type>Date</type>
</CustomField>