force-app/main/default/objects/Client_PO_Tracker__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice/Dc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>