force-app/main/default/objects/Client_PO_Tracker__c/fields/PO_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Issued_Date__c</fullName>
    <label>PO Issued Date</label>
    <type>Date</type>
</CustomField>